# anonpaste-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  sqlx-data.json
.sqlx/: query-1f0bc055eda83180b1cba59fbac161a8b8783ecb787d70a737e667b9d808b25d.json  query-29e40b9b1c31b8c9c2bf1d6d2082240cfd50d50f6f7fa25bb0920488cd0a0c0c.json  query-6366ca91b83c2f5738d17bfdd8490947e2fc94c2f1b5265a4abc98e2b9558cf3.json  query-7ae3f2db3ae8b382560202347bfdb2508a3088cb66efb6ce30eba5040ed48e16.json  query-94e0d7a9763bf743e25a66d1ff9b306c3a935111331cd8dc7bee2eda7471c3e0.json  query-bfb1ca4f40a3ac85cbd23a251e4184dea16eb1767d24368c5df65ea3d7a1cc8b.json  query-cbb66f6a3b15657d4cb9c3c03c94d272665d0bf07f69d73418da787de9bbdf46.json  query-e726102e55472fbebc5363c98f7f2c157aafbd5989b9c0b5dc6536dba7e5f7a9.json
migrations/: 20220927_paste.sql  20220929_report.sql
src/: error.rs  lib.rs  mailer.rs  main.rs  server.rs
src/models/: paste.rs  report.rs
src/resources/: mod.rs  paste.rs  report.rs
tests/: health.rs  paste.rs  report.rs
