[package]
name = "anonpaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = { version = "0.6.1", features = ["headers", "macros"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "offline"] }
tokio = { version = "1.23.0", features = ["macros"]}
anyhow = "1.0.66"
thiserror = "1.0.38"
serde = { version = "1.0.150", features = ["derive"] }
tower-http = { version = "0.3.0", features = [
    "cors",
    "auth",
    "compression-full",
    "trace"
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower_governor = "0.0.3"
governor = "0.5.1"
tower = "0.4.13"
sendgrid = { version = "0.18.1", features = ["native-tls", "async"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[toolchain]
channel = "nightly"
