[package]
name = "anonpaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.23.0", features = ["macros"] }
anyhow = "1.0.66"
thiserror = "1.0.38"
serde = { version = "1.0.150", features = ["derive"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "auth",
    "compression-full",
    "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower_governor = "0.2.0"
governor = "0.6.0"
tower = "0.4.13"
sendgrid = { version = "0.19.2", default-features = false, features = [
    "rustls",
    "async",
] }
hyper = "1.0.1"
serde_json = "1.0.91"
rand = { version = "0.8.5", features = ["small_rng"] }

[toolchain]
channel = "nightly"
